updated enpoints to handle different collections
