# src/controllers/eventController.ts
@@ -1,13 +1,13 @@
 import { client } from '../db/connect';
 import { ObjectId } from 'mongodb';
-import { IEvents } from '../lib/event';
+import { IEventUpdate, IEvents } from '../lib/event';
 
 const createNew = async (req, res) => {
-    await client.connect();
     const eventData: IEvents = req.body;
+    await client.connect();
 
     const event = { ...eventData, _id: new ObjectId() };
-    const result = await client.db('rexy_events').collection('events').insertOne(event);
+    const result = await client.db('rexy_events').collection(event.event_type).insertOne(event);
     if (result.acknowledged) {
         res.status(201).json(event);
     } else {
@@ -18,9 +18,18 @@ const createNew = async (req, res) => {
 const updateSingle = async (req, res) => {
     await client.connect();
     const eventId = new ObjectId(req.params.id);    
-    const eventData: IEvents = req.body;
+    const eventCategory = req.params.category;
+    const eventData: IEventUpdate = req.body;
 
-    const result = await client.db('rexy_events').collection('events').replaceOne({_id: eventId}, eventData)
+    const result = await client.db('rexy_events').collection(eventCategory).updateOne({_id: eventId},{
+        $set: {
+            event: eventData.event,
+            address: eventData.address,
+            website: eventData.website,
+            description: eventData.description,
+            date: eventData.date,
+        }
+    })
 
     if (result.acknowledged) {
         res.status(204).send();
@@ -32,8 +41,9 @@ const updateSingle = async (req, res) => {
 const deleteSingle = async (req, res) => {
     await client.connect();
     const eventId = new ObjectId(req.params.id);
+    const eventCategory = req.params.category;
    
-    const result = await client.db('rexy_events').collection('events').deleteOne({_id: eventId});
+    const result = await client.db('rexy_events').collection(eventCategory).deleteOne({_id: eventId});
     if (result.deletedCount > 0) {
         res.status(200).json({acknowledged: result.acknowledged, deletedCount: result.deletedCount});
     } else {
@@ -44,8 +54,9 @@ const deleteSingle = async (req, res) => {
 const getSingle = async (req, res) => {
     await client.connect();
     const eventId = new ObjectId(req.params.id);
+    const eventCategory = req.params.category;
 
-    const event = await client.db('rexy_events').collection('events').findOne({ _id: eventId });
+    const event = await client.db('rexy_events').collection(eventCategory).findOne({ _id: eventId });
 
     if (event) {
         res.status(200).json(event);
@@ -56,8 +67,9 @@ const getSingle = async (req, res) => {
 
 const getAll = async (req, res) => {
     await client.connect();
+    const eventCategory = req.params.category;
 
-    const events = await client.db('rexy_events').collection('events').find().toArray();
+    const events = await client.db('rexy_events').collection(eventCategory).find().toArray();
 
     if (events.length > 0) {
         res.status(200).json(events);
@@ -66,4 +78,18 @@ const getAll = async (req, res) => {
     }
 };
 
-export { createNew, updateSingle, deleteSingle, getSingle, getAll };
+const getCategories = async (req, res) => {
+    await client.connect();
+    const categories = await client.db('rexy_events').listCollections().toArray()
+    if(categories.length > 0){
+        let list_of_categories: string[] = [];
+        categories.map((category)=>{
+            list_of_categories.push(category.name);
+        })
+        res.status(200).json({categories: list_of_categories});
+    }else{
+        res.status(500).json({message: 'Some error occurred while gathering the event categories.'});
+    }
+}
+
+export { createNew, updateSingle, deleteSingle, getSingle, getAll, getCategories };
