# src/routes/eventRoutes.ts
@@ -1,14 +1,15 @@
 import express, { Router } from 'express';
-import { createNew, updateSingle, deleteSingle, getSingle, getAll } from '../controllers/eventController';
+import { createNew, updateSingle, deleteSingle, getSingle, getAll, getCategories } from '../controllers/eventController';
 import { ensureAuth } from '../services/auth';
 
 const router: Router = express.Router();
 
 router.post("/", ensureAuth, createNew);
-router.put("/:id", ensureAuth, updateSingle);
-router.delete("/:id", ensureAuth, deleteSingle);
+router.put("/:category/:id", ensureAuth, updateSingle);
+router.delete("/:category/:id", ensureAuth, deleteSingle);
 
-router.get("/:id", ensureAuth, getSingle);
-router.get("/", ensureAuth, getAll);
+router.get("/:category/:id", getSingle);
+router.get("/:category", getAll);
+router.get("/", getCategories);
 
 export { router as events };
